--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <button onclick="takePicture()">Take a picture</button>
       </br>
         <img src="" id= "pictureContainer" alt="WebCam image  made by the webserver">
+        <img src="" id= "filteredPictureContainer" alt="Filtered Image">
         <script src="client.js"></script>
     </body>
 </html>
